try feasible_stack

--- a/PIC10CProject.vcxproj
+++ b/PIC10CProject.vcxproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="Sudoku_Solver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h" />
