--- a/PIC10CProject.vcxproj
+++ b/PIC10CProject.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Stack.h" />
+    <ClInclude Include="Sudoku_Solver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
