--- a/PIC10CProject.vcxproj.filters
+++ b/PIC10CProject.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sudoku_Solver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
