--- a/PIC10CProject.vcxproj.filters
+++ b/PIC10CProject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Sudoku_Solver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Sudoku_Generator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Sudoku_Solver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sudoku_Generator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
